--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filler",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "fake a whole jsoncan db data accoring to schemas",
   "main": "index.js",
   "scripts": {
@@ -12,16 +12,20 @@
   },
   "keywords": [
     "fake",
+    "test",
     "filler",
     "schemas",
     "db"
   ],
   "dependencies": {
-    "yi"      : ">= 0.0.5",
-    "jsoncan" : "^1.2.0",
-    "mice"    : "^0.1.0",
-    "rander"  : "^0.1.0",
-    "myna"    : ">= 0.0.2"
+    "yi"         : ">= 0.0.6",
+    "jsoncan"    : "^1.3.0",
+    "mice"       : "^0.1.0",
+    "rander"     : "^0.1.0",
+    "myna"       : "^0.1.2",
+    "fala"       : "^0.1.0",
+    "async"      : "*",
+    "eventchain" : "^0.1.0"
   },
   "devDependencies": {
     "should": "*",
